Adding signups stuff
