# marble-races-api/db.js
@@ -19,10 +19,10 @@ db.Sequelize = Sequelize
 db.sequelize = sequelize
 db.teams = require('./models/Team.model')(sequelize, Sequelize)
 db.competitions = require('./models/Competition.model')(sequelize, Sequelize)
-db.signups = require('./models/Signups.model')(sequelize, Sequelize, db.teams, db.competitions)
+db.signUps = require('./models/Signups.model')(sequelize, Sequelize, db.teams, db.competitions)
 
 async function Sync() {
-    await sequelize.sync({alter: true}) //alter tabel
+    await sequelize.sync({alter: true}) //alter tabel {alter: true}
     //                   {force: true}  //erase and recreate
 }
 module.exports = {db, Sync}
