# marble-races-api/models/Signups.model.js
@@ -1,5 +1,5 @@
 module.exports = (sequelize, Sequelize, Team, Competition) => {
-    const Signups = sequelize.define("Signups", {
+    const Signups = sequelize.define("signups", {
 
         id: {
             type: Sequelize.INTEGER,
@@ -23,5 +23,10 @@ module.exports = (sequelize, Sequelize, Team, Competition) => {
     })
     Team.belongsToMany(Competition, { through: Signups })
     Competition.belongsToMany(Team, { through: Signups })
+
+    Team.hasMany(Signups)
+    Signups.belongsTo(Team)
+    Competition.hasMany(Signups)
+    Signups.belongsTo(Competition)
     return Signups
 }
